Revision history for Gimp-Perl extension.

1.09
	- corrected PDL version check to work with version 2.001.
        - new file Net.xs, containing protocol serializer
        - new, faster and leaner protocol (bumped protocol version number).
        - added SvPV_nolen to ppport.h and made use of it everywhere.
        - renamed nolib => Module.

1.089 Tue May 18 19:55:25 CEST 1999
	- added colourtoalpha.
	- made all internal C functions static -> less namespace bloat.
        - its possible to shorten the call $drawable->get->pixel_rgn
          to "just" $drawable->pixel_rgn.
        - made one-arg gimp_progress_init work again.
	- removed compatibility code from Lib.xs.
        - call the XS version of gimp_progress_init when only
          one argument is given.
        - re-added PARASITE_*-constants (including UNDOABLE variants).
        - temporarily disabled the module for political reasons.
        - made my first attempt at implementing XS-PDL support.
        - transform obnjects ids of -1 into undef and vice versa.
        - Gimp::Fu did not properly supply a default value for PF_COLOUR.

1.083 Wed May 12 03:36:10 CEST 1999
	- took a modified enums.pl to autogenerate constants. Some constants
          have changed:
          RED, GREEN etc.. => RED_LUT, GREEN_LUT
          the shear constants got a _SHEAR suffix.
          the flip constants got a _FLIP suffix.
          SHARPEN/BLUR => SHARPEN_CONVOLVE/...
        - got rid of _gimp_prefix and _gimp_path functions.
        - removed debugging trace from Gimp::Compat. Ugh.
        - improved documentation for Gimp::Config.
        - reenabled all of t/run.t again, fixed to to actually _work_.
        - rearranged gimp link flags into LDDLFLAGS (hack! bug in gtk/gimp!).
        - fixed RUN_FULLINTERACTIVE.
        
1.082 Tue May 11 19:02:30 CEST 1999
	- fixed sunos/solaris socketpair "protocol not implemented" problem.
        - added the Gimp::register_callback function and made Gimp::Fu use it.